crates/anodized/tests/compile_fail/spec_on_impl_trait_type.rs
#![no_main]

use anodized::spec;

#[spec]
trait T {
    type U;
}

#[spec]
impl T for S {
    #[spec]
    type U = bool;
}

struct S;
