crates/anodized/tests/compile_fail/spec_on_impl_trait_type.stderr
error: The #[spec] attribute doesn't yet support this item: trait impl type.
       If this is a problem for your use case, please open a feature
       request at https://github.com/mkovaxx/anodized/issues/new
  --> tests/compile_fail/spec_on_impl_trait_type.rs:12:5
   |
12 |     #[spec]
   |     ^^^^^^^
